Add multi-quality audio and expanded platform extraction for v3